--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
-name = "chi2026"
+name = "VRStats"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
-    "openpyxl>=3.1.5",
-    "pandas>=2.3.3",
-    "pandas-stubs==2.3.2.250926",
+    "fastexcel>=0.18.0",
+    "polars>=1.35.2",
     "scipy>=1.16.3",
     "scipy-stubs==1.16.3.0",
     "statsmodels>=0.14.5",
+    "xlsxwriter>=3.2.9",
 ]
